# delaunay-interfaces

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  Manifest.toml  Project.toml  README.md
examples/: CMakeLists.txt  julia_example.jl  julia_examples.ipynb  python_example.py  python_examples.ipynb  simple_example.cpp
include/delaunay_interfaces/: barycentric_subdivision.hpp  chromatic_partitioning.hpp  interface_generation.hpp  types.hpp
index/: barycentric_subdivision.cpp.21B11CD450CD91D0.idx  barycentric_subdivision.hpp.BD01A4E0FC88A1F8.idx  bindings.cpp.43B7CF2CC5B63A3E.idx  bindings.cpp.F3ED882C17BC0FCB.idx  chromatic_partitioning.cpp.740950EBD5DF43DE.idx  chromatic_partitioning.hpp.01CD48F95FC9BDBB.idx  interface_generation.cpp.9868650309EFB111.idx  interface_generation.hpp.6BC30253E6F67DF1.idx  simple_example.cpp.4AEE8AA533288F04.idx  test_basic.cpp.6EBE6C9FC3235A8B.idx  test_combinatorial.cpp.6C8125491DBFE0F6.idx  test_custom_barycenter.cpp.8859177FD8F03F4B.idx  test_ground_truth.cpp.8DB15740922ACA05.idx  test_large_examples.cpp.4EB3B67E43AA785E.idx  types.hpp.57ECB0D95246788A.idx
julia/: CMakeLists.txt  bindings.cpp
julia/src/: DelaunayInterfaces.jl  visualization.jl
python/: CMakeLists.txt  __init__.py  bindings.cpp  setup.py
scripts/: generate_protein_figure.jl  generate_tetrahedra_figure.jl
src/: barycentric_subdivision.cpp  chromatic_partitioning.cpp  interface_generation.cpp
tests/: CMakeLists.txt  test_basic.cpp  test_combinatorial.cpp  test_custom_barycenter.cpp  test_ground_truth.cpp  test_large_examples.cpp
tests/data/: ground_truth.json  ground_truth_4bmg_dimer_alpha.json
